sise-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: sise-deploy
  namespace: sise-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sise-deploy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sise-deploy
    spec:
      containers:
      - image: quay.io/openshiftlabs/simpleservice:0.5.0
        imagePullPolicy: IfNotPresent
        name: container
        ports:
        - containerPort: 9876
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
