sise-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sise-svc
  namespace: sise-test
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 172.30.48.140
  clusterIPs:
  - 172.30.48.140
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32570
    port: 80
    protocol: TCP
    targetPort: 9876
  selector:
    app: sise-deploy
  sessionAffinity: None
  type: LoadBalancer
