sise-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sise
  namespace: sise-test
spec:
  host: simple-service.apps.ocp4.redhat-workshop.in
  path: /info
  port:
    targetPort: 9876
  to:
    kind: Service
    name: sise-svc
    weight: 100
  wildcardPolicy: None
